dev-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: mart-dev
spec: {}
status: {}
