shopping-ms-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: shopping-ms
  name: shopping-ms
spec:
  containers:
  - image: marttp/shopping
    name: shopping-ms
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
