customer-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: customer
  name: customer-service
  namespace: mart-dev
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: customer
status:
  loadBalancer: {}
