shopping-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: shopping
  name: shopping-service
  namespace: mart-dev
spec:
  ports:
  - port: 9000
    protocol: TCP
    targetPort: 9000
  selector:
    app: shopping
status:
  loadBalancer: {}
