ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: mart-dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: mstest.kube.example
    http:
      paths:
      - path: /customer(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: customer-service
            port:
              number: 3000
      - path: /shopping(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: shopping-service
            port:
              number: 9000
